PROJECT(test)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
add_compile_options(-std=c++11)
#find_package(Threads REQUIRED)  
#if(THREADS_HAVE_PTHREAD_ARG)  
#	set_property(TARGET test PROPERTY COMPILE_OPTIONS "-pthread")  
#	set_property(TARGET test PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")  
#endif()  
#if(CMAKE_THREAD_LIBS_INIT)  
#	target_link_libraries(test "${CMAKE_THREAD_LIBS_INIT}")  
#endif()  
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(test ${DIR_SRCS})
find_package(Threads)
target_link_libraries(test ${CMAKE_THREAD_LIBS_INIT})
