PROJECT(test)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
add_compile_options(-std=c++11)
#find_package(Threads REQUIRED)  
#if(THREADS_HAVE_PTHREAD_ARG)  
#	set_property(TARGET test PROPERTY COMPILE_OPTIONS "-pthread")  
#	set_property(TARGET test PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")  
#endif()  
#if(CMAKE_THREAD_LIBS_INIT)  
#	target_link_libraries(test "${CMAKE_THREAD_LIBS_INIT}")  
#endif()  
set(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(test ${DIR_SRCS})
find_package(Threads)
target_link_libraries(test ${CMAKE_THREAD_LIBS_INIT})
